--- a/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
+++ b/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChallengeActivity" android:theme="@style/Theme.AppCompat"></activity>
         <activity android:name=".SettingAlarmActivity"/>
         <service android:name=".AlarmService" />
     </application>
