--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 #Android
 .idea
 .gradle
-build/generated
-build/intermediates
-build/tmp
-build/outputs/bundle
-build/outputs/logs
+/build/generated
+/build/intermediates
+/build/tmp
+/build/outputs/bundle
+/build/outputs/logs
