--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 07 02:15:26 ICT 2019
-sdk.dir=D\:\\Desktop\\AndroidDeveloping\\SDK
+#Tue Apr 09 23:55:07 ICT 2019
+sdk.dir=D\:\\Desktop\\androidev\\SDK
