--- a/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
+++ b/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.appbaothuc">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +23,16 @@
         </activity>
         <activity android:name=".ChallengeActivity" android:theme="@style/Theme.AppCompat"></activity>
         <activity android:name=".SettingAlarmActivity"/>
-        <service android:name=".AlarmService" />
+        <service android:name=".services.AlarmService" />
+        <service android:name=".services.NotificationService"/>
+        <service android:name=".services.ServiceRestarter"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+        <receiver android:name=".services.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.ACTION_EXTERNAL_APPLICATIONS_AVAILABLE"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
