--- a/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
+++ b/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".SettingAlarmActivity"/>
         <service android:name=".services.AlarmService" />
         <service android:name=".services.NotificationService"/>
-        <service android:name=".services.ServiceRestarter"
+        <service android:name=".services.ServiceReviver"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
         <receiver android:name=".services.BootReceiver">
             <intent-filter>
