--- a/Project/AlarmTypeApp/app/src/main/AndroidManifest.xml
+++ b/Project/AlarmTypeApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".TypePlayMathActivity"></activity>
+        <activity android:name=".TypePlayShakeActivity" />
+        <activity android:name=".TypePlayCameraActivity" />
+        <activity android:name=".TypePlayDefaultActivity" />
+        <activity android:name=".TypeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
