--- a/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
+++ b/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".TypePlayMathActivity"></activity>
+        <activity android:name=".TypePlayShakeActivity" />
+        <activity android:name=".TypePlayCameraActivity" />
+        <activity android:name=".TypePlayDefaultActivity" />
+        <activity android:name=".TypeActivity" />
         <activity android:name=".SettingAlarmActivity"/>
         <service android:name=".services.AlarmService" />
         <service android:name=".services.NotificationService"/>
