--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 12 22:56:00 ICT 2019
-sdk.dir=D\:\\Android\\SDK
+#Sat Apr 13 00:26:20 ICT 2019
+sdk.dir=D\:\\Desktop\\androidev\\SDK
