--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 13 16:09:44 ICT 2019
-sdk.dir=D\:\\Android\\SDK
+#Sat Apr 13 16:29:25 ICT 2019
+sdk.dir=D\:\\Desktop\\androidev\\SDK
