--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 09 09:56:54 ICT 2019
-sdk.dir=C\:\\Users\\TK13\\AppData\\Local\\Android\\Sdk
+#Mon Apr 15 18:57:31 ICT 2019
+sdk.dir=D\:\\Desktop\\androidev\\SDK
