--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 18 01:30:23 ICT 2019
-sdk.dir=D\:\\Desktop\\androidev\\SDK
+#Fri Apr 19 23:42:41 ICT 2019
+sdk.dir=D\:\\Android\\SDK
