--- a/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
+++ b/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity
             android:name=".challenge.ChallengeActivity"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat">
         </activity>
         <activity android:name=".alarmsetting.TypePlayMathActivity" />
@@ -39,14 +40,7 @@
             android:name=".services.ServiceCreator"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <receiver android:name=".services.ActionReceiver">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.BOOT_COMPLETED" />-->
-                <!--<action android:name="android.intent.action.ACTION_EXTERNAL_APPLICATIONS_AVAILABLE" />-->
-                <!--<action android:name="android.intent.action.TIME_SET" />-->
-                <!--<action android:name="android.intent.action.TIMEZONE_CHANGED" />-->
-            <!--</intent-filter>-->
-        </receiver>
+        <receiver android:name=".services.ActionReceiver"/>
     </application>
 
 </manifest>
