--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 25 19:39:31 ICT 2019
-sdk.dir=D\:\\Android\\SDK
+#Thu May 02 17:37:23 ICT 2019
+sdk.dir=D\:\\Desktop\\androidev\\SDK
