--- a/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
+++ b/Project/AppBaoThuc/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
         </activity>
         <activity
             android:name=".challenge.ChallengeActivity"
-            android:launchMode="singleTask"
-            android:theme="@style/Theme.AppCompat"></activity>
+            android:launchMode="singleTask"/>
         <activity android:name=".alarmsetting.TypePlayMathActivity" />
         <activity android:name=".alarmsetting.TypePlayShakeActivity" />
         <activity android:name=".alarmsetting.TypePlayCameraActivity" />
