--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 11 23:00:23 ICT 2019
-sdk.dir=D\:\\Desktop\\androidev\\SDK
+#Sun May 12 11:41:19 ICT 2019
+sdk.dir=C\:\\Users\\Moon\\AppData\\Local\\Android\\Sdk
