--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-#Sat May 11 23:21:02 ICT 2019
-sdk.dir=D\:\\Android\\SDK
+#Sun May 12 17:45:03 ICT 2019
+sdk.dir=D\:\\Desktop\\androidev\\SDK
