--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 **/build/tmp
 **/outputs/bundle
 **/outputs/logs
+Project/AppBaoThucDinhCao/gradle/wrapper/gradle-wrapper.properties
+Project/AppBaoThucDinhCao/build.gradle
+Project/AppBaoThuc/local.properties
+Project/AppBaoThuc/AppBaoThuc.iml
