--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Project/AppBaoThucDinhCao/gradle/wrapper/gradle-wrapper.properties
 Project/AppBaoThucDinhCao/build.gradle
 Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/AppBaoThuc.iml
+Project/AppBaoThuc/local.properties
