--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Project/AppBaoThucDinhCao/build.gradle
 Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/AppBaoThuc.iml
 Project/AppBaoThuc/local.properties
+Project/AppBaoThuc/app/app.iml
