--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 13 13:28:22 ICT 2019
-sdk.dir=D\:\\Desktop\\androidev\\SDK
+#Mon May 13 18:11:38 ICT 2019
+sdk.dir=D\:\\Android\\SDK
