--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Project/AppBaoThuc/app/app.iml
 Training/QuanLyDonHang/app/app.iml
 Training/QuanLyDonHang/app/app.iml
 Project/AppBaoThuc/local.properties
+Project/AppBaoThuc/local.properties
