--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Training/QuanLyDonHang/app/app.iml
 Training/QuanLyDonHang/app/app.iml
 Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/local.properties
+Project/AppBaoThuc/local.properties
+Project/AppBaoThuc/app/build/outputs/apk/debug/app-debug.apk
