update AMPM in item_alarm

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/app/build/outputs/apk/debug/app-debug.apk
+Project/AppBaoThuc/local.properties
+Project/AppBaoThuc/app/app.iml
