--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/app/build/outputs/apk/debug/app-debug.apk
 Project/AppBaoThuc/local.properties
 Project/AppBaoThuc/app/app.iml
+Project/AppBaoThuc/app/app.iml
+Project/AppBaoThuc/build.gradle
+Project/AppBaoThuc/local.properties
