--- a/Project/AppBaoThuc/local.properties
+++ b/Project/AppBaoThuc/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-
+#Wed May 22 12:35:27 ICT 2019
+sdk.dir=C\:\\Users\\Moon\\AppData\\Local\\Android\\Sdk
